<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps</string>
    <string name="btn_spotify_streamer">Spotify Streamer</string>
    <string name="btn_scores_app">Football Scores App</string>
    <string name="btn_library_app">Library App</string>
    <string name="btn_build_it_bigger">Build it Bigger</string>
    <string name="btn_xyz_reader">XYZ Reader</string>
    <string name="btn_capstone">Capstone: My Own App</string>
</resources>
