<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@android:color/background_dark"
        android:gravity="center_horizontal"
        android:textIsSelectable="false"
        android:textSize="28dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_spotify_streamer"
        android:id="@+id/btn_spotify_streamer"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="openSpotify"
        android:layout_marginBottom="10dip"
        style="@style/Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_scores_app"
        android:id="@+id/btn_scores"
        android:layout_below="@+id/btn_spotify_streamer"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="openScores"
        android:layout_marginBottom="10dip"
        style="@style/Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_library_app"
        android:id="@+id/btn_library"
        android:layout_below="@+id/btn_scores"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="openLibrary"
        android:layout_marginBottom="10dip"
        style="@style/Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_it_bigger"
        android:id="@+id/btn_build_it_bigger"
        android:layout_below="@+id/btn_library"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="openBuildItBigger"
        android:layout_marginBottom="10dip"
        style="@style/Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_xyz_reader"
        android:id="@+id/btn_xyz_reader"
        android:layout_below="@+id/btn_build_it_bigger"
        android:layout_alignRight="@+id/btn_build_it_bigger"
        android:layout_alignEnd="@+id/btn_build_it_bigger"
        android:layout_alignLeft="@+id/btn_build_it_bigger"
        android:layout_alignStart="@+id/btn_build_it_bigger"
        android:onClick="openXYZReader"
        android:layout_marginBottom="10dip"
        style="@style/Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:id="@+id/btn_capstone"
        android:onClick="openCapstone"
        android:layout_below="@+id/btn_xyz_reader"
        android:layout_alignRight="@+id/btn_xyz_reader"
        android:layout_alignEnd="@+id/btn_xyz_reader"
        android:layout_alignLeft="@+id/btn_xyz_reader"
        android:layout_alignStart="@+id/btn_xyz_reader"
        android:layout_marginBottom="10dip"
        style="@style/Button.Primary" />

</RelativeLayout>
